fix input vertical alignement in Minter

--- a/src/mint/components/input/styles.module.scss
+++ b/src/mint/components/input/styles.module.scss
@@ -11,7 +11,7 @@
 
     p {
       position: absolute;
-      top: 0;
+      top: -16px;
       left: 0;
       color: var(--text-color);
       opacity: 0.7;
@@ -27,10 +27,12 @@
       color: var(--text-color);
       transition: color #{$theme-duration} ease-out;
       // border-bottom: 1px solid var(--text-color);
+      font-size: inherit;
 
       &::placeholder {
         color: var(--text-color);
         opacity: 0.4;
+
       }
 
       &:focus {
